# llm_client_extension

./: .gitignore  .pnp.cjs  README.md  package.json  pyproject.toml  tsconfig.json
llm_client_extension/: __init__.py
schema/: plugin.json
src/: index.ts  widget.ts
style/: index.css  index.js
